# azure-app-registration-monitor

./: README.md  app_registrations.py  confidential_client_secret.py  date_time.py  email_report_template.html  email_template.html  pyproject.toml  send_email.py  send_email_report.py
.github/: dependabot.yml
.github/workflows/: azure-app-registration-monitor.yaml
